# cmake_c_template

./: .gitignore  CMakeLists.txt  README.md  build.sh
exec/: CMakeLists.txt
exec/src/: main.c
lib/: CMakeLists.txt
